--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -8,3 +8,25 @@ on:
 jobs:
   build-and-deploy:
     runs-on: 'ubuntu-latest'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3  # Essa action do github baixa a versão atualizada do código
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3 # Essa action instala o Node
+        with:
+          node-version: 16
+
+      - name: Install dependencies 
+        run: npm ci # Comando para instalar as dependencias de produção do projeto em ambientes não interativos (não é possível dar nenhuma entrada no terminal).
+                    # Nada mais é que o npm install para instalar as dependencias, porém ele é para para ambientes não interativos
+                    # O comando instala somente as dependencias de produção do projeto e não mexe no arquivo package-lock.json
+
+      - name: Build Storybook 
+        run: npm run build-storybook
+
+      - name: Deploy Storybook
+        run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        env:
+          GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
