--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,7 +19,8 @@ jobs:
           node-version: 16
 
       - name: Install dependencies 
-        run: npm ci --force # Comando para instalar as dependencias de produção do projeto em ambientes não interativos (não é possível dar nenhuma entrada no terminal).
+        run: npm ci --legacy-peer-deps
+                    # Comando para instalar as dependencias de produção do projeto em ambientes não interativos (não é possível dar nenhuma entrada no terminal).
                     # Nada mais é que o npm install para instalar as dependencias, porém ele é para para ambientes não interativos
                     # O comando instala somente as dependencias de produção do projeto e não mexe no arquivo package-lock.json
 
